# slides

./: README.md
2020-03-18/: async-rust.odp
2020-03-18/demo1/: Cargo.toml
2020-03-18_Rust_Intro/demo1/src/: main.rs
2020-03-18_Rust_Intro/demo2/: Cargo.toml
2020-03-18_Rust_Intro/demo2/src/: main.rs
2020-03-18_Rust_Intro/demo3/: Cargo.toml
2020-03-18_Rust_Intro/demo3/src/: main.rs
2020-03-25/: Mycroft - prokhor.odp
2020-05-20_Django/: Vortrag_Django.odp
2020-07-01/: echoserver_asyncio.py
2020-07-01_io_uring/: echoserver_multithreaded.py  echoserver_select.py  echoserver_sequential.py
