[package]
name = "demo3"
version = "0.1.0"
authors = ["xermicus <bigcyrill@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
